--- a/src/Styles/GlobalStyles.css
+++ b/src/Styles/GlobalStyles.css
@@ -7,10 +7,11 @@
 body{
   background: var(--background);
   color:  var(--text);
+  font-family: "Inter", sans-serif;
 };
 
 body, input, textarea, button {
-  font: 400 1rem "Inter", sans-serif
+  font: 400 1rem;
 }
 
 button {
